# flanders

./: .gitignore  README.md  attacks.py  client.py  clients.py  environment.yml  environment2.yml  experiments_config.csv  flanders.yml  main.py  mnist.py  params.npy  plot_logs.py  pyproject.toml  requirements.txt  results.md  run.sh  server.py  var-mar.ipynb
MSCRED/: signature_matrices.py
Material_for_plots/: Flanders_plot.ipynb
datasets/: houses_preprocessed.csv
histories/: weights_0_history.npy  weights_1_history.npy
main/: .gitignore  README.md  attacks.py  cifar_client.py  cifar_server.py  client.py  clients.py  dataset_utils.py  experiments_config.csv  flanders.yml  generate_exp_config.py  load_tensors.py  mnist.py  nn.py  params_ts.csv  params_ts.npy  plot_logs.py  run.sh  sample.json  server.py
main/cifar_nn/: dataset_utils.py  utils.py
main/clients_params/: 0_params.npy  1_params.npy  2_params.npy  3_params.npy  4_params.npy  5_params.npy  6_params.npy  7_params.npy  8_params.npy  9_params.npy
main/strategy/: bulyan.py  (+18 more)
matrix_data/: matrix_win_20.npy
neural_networks/: dataset_utils.py  neural_networks.py
results/: aggregated_losses.npy  aggregated_losses_0p_malicious.npy
results_all/: all_results.csv
strategy/: bulyan.py  fedmedian.py  fedmscred.py  fedmscred2.py  flanders_global.py  fltrust.py  generate_dataset_fg.py  krum.py  krum_parameters_aggregated.npy  malicious_fedavg.py  mscred.py  multikrum.py  robustrategy.py  test_strategy.py  trimmedmean.py  utilities.py  weights_history.npy
utilities/: generate_exp_config.py  plot_logs.py
(+1569 files in other folders)
